# lokai-web

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  leptosfmt.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
assets/scripts/: index.ts
assets/styles/: index.css
migrations/: 20240415110616_init.down.sql  20240415110616_init.up.sql  20240610043709_conversation_settings.down.sql  20240610043709_conversation_settings.up.sql
src/: api.rs  app.rs  config.rs  db.rs  error.rs  frontend.rs  handlers.rs  lib.rs  main.rs  models.rs  ollama.rs  state.rs  ws.rs
src/_frontend/components/: message.rs
src/_frontend/views/: chat.rs  home.rs  mod.rs
src/components/: conversation_area.rs  mod.rs  prompt_area.rs  sidebar.rs
src/frontend/: mod.rs
src/frontend/components/: conversation.rs  message.rs  mod.rs  prompt.rs  sidebar.rs
src/frontend/views/: chat.rs  home.rs  mod.rs  not_found.rs
src/models/: conversation.rs  message.rs  mod.rs
src/routes/: index.rs  mod.rs  not_found.rs  robots.rs
src/server/: api.rs  db.rs  error.rs  mod.rs  ollama.rs
style/: tailwind.css
templates/: _base.html  conversation.html  index.html  not_found.html
templates/chat_area/: append_message.html  chat_area.html  message.html  prompt.html  swap_message.html
templates/sidebar/: conversation.html  new_conversation_form.html  sidebar.html
