# TODO: define optimisation settings
[package]
name = "lokai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# TODO: use native tls crate
[dependencies]
# TODO: consider maud
askama = "0.12"
axum = { version = "0.7", features = ["macros", "tokio", "ws"] }
console_error_panic_hook = "0.1"
derive_more = { version = "0.99" }
futures-util = { version = "0.3" }
http = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
# TODO: use uuid v7 or something nicer
uuid = { version = "1.8", features = ["v4", "serde"] }
