[package]
name = "lokai"
authors = ["Lukasz Kielar <kielar.lukasz@hotmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# TODO: use native tls crate
[dependencies]
askama = "0.12"
askama_axum = "0.4"
axum = { version = "0.7", features = ["macros", "tokio", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
derive_more = { version = "0.99" }
futures-util = { version = "0.3" }
http = "1"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.4", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
